# ai-vuln-harness

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GAP.md  README.md  SKILL.md  default_config.yaml  opengrep-report.txt  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: FAILURE_MODES.md  implementation.md  logging.md  stages.md
references/: dependencies.md  invariants.md  operating-defaults.md  operation.md  schemas.md
src/ai_vuln_harness/: .vulture_whitelist.py  __init__.py  __main__.py  asan.py  cache.py  mcp_client.py  mcp_server.py  run.py  sandbox.py  skill_loader.py
src/ai_vuln_harness/config/: benchmark_corpus.json  benchmark_thresholds.json  defaults.json  models.dev  stages.json
src/ai_vuln_harness/prompts/: exploit_synthesis.md  hunt.md  independent_verify.md  pbt.md  pbt_invariant.md  recon.md  repair.md  report.md  severity-policy.md  system.md  trace.md  validate.md  validation-tuples.md
src/ai_vuln_harness/schemas/: exploit_synthesis_record.schema.json  finding.schema.json  pbt_result.schema.json  report.schema.json
src/ai_vuln_harness/scripts/: __init__.py  populate_kb.py
src/ai_vuln_harness/stages/: contracts.py  coordinator.py  crash_corpus.py  cve_corpus.py  cve_exploit_synthesis.py  cve_fetcher.py  dataset_loaders.py  embeddings.py  engagement_graph.py  evidence_collector.py  exploit_synthesis.py  exposure.py  feedback.py  findings_bus.py  findings_db.py  fuzz_orchestrator.py  gapfill.py  independent_verify.py  ingestor.py  localization.py  output_review.py  owasp_rules.py  patch.py  pbt.py  poc.py  post_processor.py  rag_kb.py  report.py  runtime.py  scan_checkpoint.py  self_recovery.py  shield.py  suppressions.py  target_templates.py  test_reducer.py  validate.py  variant_hunter.py  voting.py  z3_verifier.py
templates/v1/: .vulture_whitelist.py  CHANGELOG.md  README.md  pyproject.toml  run.py
templates/v1/config/: defaults.json  models.dev  stages.json
templates/v1/docs/: SPEC.md
templates/v1/schemas/: poc-schema.json  snippet.schema.json
templates/v1/stages/: chains.py  contracts.py  coordinator.py  diff.py  exposure.py  feedback.py  gapfill.py  ingestor.py  parser.py  poc.py  recon.py  report.py  runtime.py  shield.py  suppressions.py  validate.py  voting.py
templates/v1/tests/: .coverage  conftest.py  test_adversarial.py  test_adversarial_contracts.py  test_adversarial_coordinator.py  test_diff.py  (+29 more)
tests/: conftest.py  test_adversarial.py  test_adversarial_contracts.py  test_adversarial_coordinator.py  test_adversarial_extra.py  test_adversarial_ingestor.py  test_adversarial_parser.py  test_adversarial_report.py  test_adversarial_sandbox.py  test_adversarial_suppressions.py  test_adversarial_validate.py  test_adversarial_voting.py  test_asan.py  test_benchmark_gate.py  test_break.py  test_cache.py  test_chains.py  test_complexity_score.py  test_confabulation.py  test_cve_corpus.py  test_cve_exploit_synthesis.py  test_cve_fetcher.py  test_dataset_loaders.py  test_dataset_loaders_extended.py  test_dataset_loaders_new.py  test_diff.py  test_egress_audit.py  test_engagement_graph.py  test_evidence_collector.py  test_exploit_synthesis.py  test_exposure.py  test_feedback.py  test_findings_db.py  test_fuzz_orchestrator.py  test_gapfill.py  test_ingestor_multilang.py  test_ingestor_tags.py  test_invariants.py  test_localization.py  test_main.py  (+31 more)
(+11 files in other folders)
