[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-vuln-harness"
version = "0.1.0"
description = "Multi-agent vulnerability research harness (Glasswing / Cloudflare methodology)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = ["fastmcp", "pyyaml"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
    "impactguard",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
sandbox = [
    "llm-sandbox[mcp-docker]",
]
cst = [
    "tree-sitter>=0.25",
    "tree-sitter-c>=0.25",
    "tree-sitter-cpp>=0.25",
    "tree-sitter-go>=0.25",
    "tree-sitter-java>=0.25",
    "tree-sitter-javascript>=0.25",
    "tree-sitter-python>=0.25",
    "tree-sitter-rust>=0.25",
    "tree-sitter-typescript>=0.25",
]
lint = [
    "prospector[with_ruff,with_mypy]",
    "semgrep",
    "vulture",
    "mdformat",
]
solver = [
    "z3-solver",
]
pbt = [
    "hypothesis",
]
search = [
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "scikit-learn>=1.3",
]
all = ["ai-vuln-harness[dev,test,lint,solver,pbt,search]"]

[project.scripts]
ai-vuln-harness = "ai_vuln_harness.__main__:main"
ai-vuln-harness-mcp = "ai_vuln_harness.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_vuln_harness"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_vuln_harness"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]
".vulture_whitelist.py" = ["N999", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["type-arg", "no-untyped-def", "no-untyped-call", "union-attr", "attr-defined", "index", "assignment", "arg-type", "no-any-return", "dict-item", "call-arg", "no-redef"]

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pylint.main]
max-args = 25
max-positional-arguments = 25
max-locals = 50
max-statements = 80
max-nested-blocks = 8
max-line-length = 88
disable = [
    "line-too-long",
    "import-outside-toplevel",
    "reimported",
    "consider-using-with",
    "too-many-locals",
    "subprocess-run-check",
    "unused-argument",
    "no-value-for-parameter",
    "use-dict-literal",
    "unspecified-encoding",
    "expression-not-assigned",
    "unnecessary-comprehension",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src/ai_vuln_harness --cov-fail-under=70"
filterwarnings = [
    "ignore:builtin type Swig:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/ai_vuln_harness"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
